fix: :sparkles: add class

--- a/views/chat/index.ejs
+++ b/views/chat/index.ejs
@@ -28,16 +28,17 @@
 </div>
 
 <div>
-  <ul>
+  <ul class="msg__list">
   </ul>
 </div>
 
 <div>
   <input
     type="text"
+    class="msg__input"
     placeholder="Digite uma nova mensagem aqui"
   >
-  <button type="button">Enviar</button>
+  <button type="button" class="send__btn">Enviar</button>
 </div>
 
 <script src="./chat/script.js"></script>
