feat: show online users

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -12,5 +12,10 @@ body {
   display: grid;
   grid-template-rows: 1fr auto 121px;
   height: 100vh;
+  overflow-x: hidden;
   padding: 30px;
+}
+
+button {
+  cursor: pointer;
 }
