--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,10 +7,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./styles/global.css">
   <script src='./socket.io/socket.io.js' defer></script>
-  <script type="module" defer>window.socket = io();</script>
+  <script type="module" defer>
+    window.socket = io();
+    window.unload = () => window.socket.disconnect();
+  </script>
   <title>MSN</title>
 </head>
 <body>
+  <%- include('onlineUsers') -%>
   <%- include('messagesDisplay') -%>
   <%- include('formToMessage') -%>
   </body>
