--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 html , body {
+  background-color: rgb(26, 25, 25);
   height: 100%;
 }
 
@@ -10,6 +11,7 @@ html , body {
 
 .chat {
   align-items: center;
+  color: rgb(206, 206, 206);
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -31,7 +33,7 @@ button {
   line-height: 50px;
   margin-top: 10px;
   text-align: center;
-  width: 600px;
+  width: 60px;
 }
 
 .messages {
