fix: :bug: req 1

--- a/views/chat/index.ejs
+++ b/views/chat/index.ejs
@@ -41,6 +41,6 @@
   <button type="button" class="send__btn">Enviar</button>
 </div>
 
-<script src="./chat/script.js"></script>
+<script src="./chat/webChat.js"></script>
 </body>
 </html>
