--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 html , body {
-  background-color: rgb(38, 38, 38);
+  background-color: #130f40;
+  background-image: linear-gradient(down, #130f40 0%, black 74%);
   font-family: montserrat, sans-serif;
   height: 100%;
 }
@@ -31,10 +32,11 @@ li {
 }
 
 .userList {
-  background-color: #ecc01f;
+  background-color: #9500ff;
+  border: #9500ff 0.125em solid;
   border-radius: 0.25rem;
-  box-shadow: inset 0 0 0.5em 0 #ecc01f , 0 0 0.5em 0 #ecc01f;
-  color: #5e5e5e;
+  box-shadow: inset 0 0 0.5em 0 #9500ff , 0 0 0.5em 0 #9500ff;
+  color: #d6d6d6;
   margin: 1rem;
   padding: 1em;
 }
@@ -48,11 +50,11 @@ input {
 }
 
 .button {
-  background-color: #ecc01f;
-  border: #ecc01f 0.125em solid;
+  background-color: #9500ff;
+  border: #9500ff 0.125em solid;
   border-radius: 0.25em;
-  box-shadow: inset 0 0 0.5em 0 #ecc01f , 0 0 0.5em 0 #ecc01f;
-  color: #5e5e5e;
+  box-shadow: inset 0 0 0.5em 0 #9500ff , 0 0 0.5em 0 #9500ff;
+  color: #d6d6d6;
   cursor: pointer;
   display: inline-block;
   font-size: 1.2rem;
@@ -64,10 +66,11 @@ input {
 }
 
 .messagesField {
-  background-color: #a7a7a7;
+  background-color: #878787;
   border-radius: 0.25em;
   height: 400px;
   margin: 20px 0;
   padding: 20px;
   width: 700px;
 }
+
