--- a/views/chat/index.ejs
+++ b/views/chat/index.ejs
@@ -18,18 +18,17 @@
     <input 
       type="text" 
       placeholder="Insira o seu nickname"
-      class="nick__name"
     >
-    <button type="button" data-testid="nickname-button" class="nick__btn">Salvar</button>
+    <button type="button">Salvar</button>
 </div>
 
 <div>
-  <ul data-testid="nickname-box" class="nick__box">
+  <ul>
   </ul>
 </div>
 
 <div>
-  <ul class="msg__list" data-testid="message-box">
+  <ul class="msg__list">
   </ul>
 </div>
 
@@ -39,7 +38,7 @@
     class="msg__input"
     placeholder="Digite uma nova mensagem aqui"
   >
-  <button type="button" class="send__btn" data-testid="send-button">Enviar</button>
+  <button type="button" class="send__btn">Enviar</button>
 </div>
 
 <script src="./chat/webChat.js"></script>
