--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,19 +11,19 @@
 <body>
   <h1>Projeto WebChat</h1>
  <div class="chat">
-   <form id="nickForm">
+   <form class="nickForm">
     <input data-testid="nickname-box" id="username" type="text" autocomplete="off" name="nickname" placeholder="Digite seu usuario">
-    <button type="submit" id="nickButton" data-testid="nickname-button">Salvar</button>
+    <button type="submit" class="nickButton" data-testid="nickname-button">Salvar</button>
    </form>
-    <div class="messages">
+    <div class="messagesContainer">
       <ul id="listMessages">
       </ul>
     </div>
     <form>
       <input type="text" id="messageInput" data-testid="message-box" name="message-box" placeholder="Digite sua mensagem aqui"/>
-      <button type="submit" id="buttonMessage" data-testid="send-button" name="send-button">Enviar</button>
+      <button type="submit" class="buttonMessage" data-testid="send-button" name="send-button">Enviar</button>
     </form>
-    <div id="usersContainer">
+    <div class="usersContainer">
       <h2>Usuarios conectados</h2>
       <ul id="users"></ul>
     </div>
