--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     <input data-testid="nickname-box" id="username" type="text" autocomplete="off" name="nickname" placeholder="Digite seu usuario">
     <button type="submit" class="nickButton" data-testid="nickname-button">Salvar</button>
    </form>
-    <div class="messagesContainer">
+    <div class="messages">
       <ul id="listMessages">
       </ul>
     </div>
@@ -25,7 +25,7 @@
     </form>
     <div class="usersContainer">
       <h2>Usuarios conectados</h2>
-      <ul id="users"></ul>
+      <ul class="users"></ul>
     </div>
   </div>
   <script src="script.js"></script>
