--- a/public/clients.css
+++ b/public/clients.css
@@ -1,25 +1,21 @@
 .header {
-  width: 100%;
   height: fit-content;
-  margin: 10px 0px 0px 10px;
-  /* margin-left: 10px; */
+  margin: 10px 0 0 10px;
+  width: 100%;  
 }
 
 .liClient {
-  font-weight: bold;
-  list-style-type: none;
-  /* padding: 5px; */
-  width: 30%;
-  display: inline-block; /*necessary*/
-  width: 180px;
   border: none;
+  border-radius: 50px;
   color: #4b890a;
-  text-align: center;
-  text-decoration: none;
   display: inline-block;
   font-size: 15px;
+  font-weight: bold;
+  list-style-type: none;
   margin: 4px 2px;
-  border-radius: 50px;
+  width: 180px;
+  text-align: center;
+  text-decoration: none;
 }
 
 .clients{
@@ -49,13 +45,10 @@
 
 .btn-txt1, .btn-txt2, .btn-txt3, .btn-txt4, .btn-nickName, .nickName
 {
-  font-family: monospace;
   display:inline;
-  font-weight: bold;
-  color: '#bd9b04';
   font-size: 15px;
-  margin: 0 0 0 0;
-  padding: 0;
+  font-family: monospace;
+  font-weight: bold;
 }
 
 ::placeholder {
@@ -65,7 +58,6 @@
 
 .nickName {
   background-color: #2d0922;
-  border: 0px solid #2d0922;
   border-style: none;
   color: white;
   outline: none;
@@ -74,9 +66,9 @@
 
 .btn-nickName {
   background: #2d0922;
-  border-bottom-style: none;
   border: none;
-  cursor: pointer;
+  border-bottom-style: none;
   color: #4b890a;
+  cursor: pointer;
   width: fit-content;
 }
