--- a/public/chat.css
+++ b/public/chat.css
@@ -9,9 +9,9 @@ body {
   font-family: monospace;
 }
 
-.title1, .title2, .usersCount {
+.title1 , .title2 , .usersCount {
   display: inline;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .title1 {
@@ -26,10 +26,10 @@ body {
   color: #4b890a;
 }
 
-.label-nickname1, .label-nickname2, .label-nickname3, .label-nickname4 {
+.label-nickname1 , .label-nickname2 , .label-nickname3 , .label-nickname4 {
   display: inline;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .label-nickname1 {
