--- a/public/messages.css
+++ b/public/messages.css
@@ -14,19 +14,18 @@
   margin: 5px 10px;
   overflow-wrap: break-word;
   text-decoration: none;
-  width:80%;
+  width: 80%;
 }
 
-.btn-msg,
-.btn-input1,
-.btn-input2,
-.btn-input3,
-.btn-input4,
+.btn-msg , 
+.btn-input1 , 
+.btn-input2 , 
+.btn-input3 , 
+.btn-input4 , 
 .messageInput {
   display: inline;
   font-size: 16px;
-  font-weight: bold;
-  margin: 0 0 0 0;
+  font-weight: 900;
 }
 
 .btn-msg {
