--- a/public/messages.css
+++ b/public/messages.css
@@ -17,12 +17,7 @@
   width: 80%;
 }
 
-.btn-msg , 
-.btn-input1 , 
-.btn-input2 , 
-.btn-input3 , 
-.btn-input4 , 
-.messageInput {
+.btn-msg , .btn-input1 , .btn-input2 , .btn-input3 , .btn-input4 , .messageInput {
   display: inline;
   font-size: 16px;
   font-weight: 900;
