--- a/public/chat.css
+++ b/public/chat.css
@@ -3,9 +3,24 @@
   padding: 0;
 }
 
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  /* background: orange; */
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 20px;
+  border: 3px solid #2d0922;
+}
+
 body {
   background-color: #2d0922;
   font-family: monospace;
+  height: 100%;
 }
 
 .title1 , .title2 , .usersCount {
@@ -44,4 +59,12 @@ body {
 
 .label-nickname4 {
   color: white;
+}
+
+@media screen and (max-width: 600px) {
+  .liClient , .title1 , .title2 , .usersCount ,
+  .label-nickname1 , .label-nickname2 , .label-nickname3 ,
+  .label-nickname4 {
+    font-size: 10px;
+  }
 }
