--- a/public/clients.css
+++ b/public/clients.css
@@ -1,6 +1,6 @@
 .header {
-  height: fit-content;
-  margin: 10px 0 0 10px;
+  /* height: fit-content; */
+  margin: 10px 0 0 0;
   width: 100%;
 }
 
@@ -20,11 +20,19 @@
 
 .clients {
   font-size: 15px;
-  max-height: 110px;
+  /* max-height: 110px; */
   overflow: auto;
   overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
+  scrollbar-width: thin;
+  scrollbar-color: blue orange;
+}
+
+@media screen and (max-width: 600px) {
+  .clients {
+    max-height: 60px;;
+  }
 }
 
 .btn-txt1 {
@@ -71,3 +79,10 @@
   cursor: pointer;
   width: fit-content;
 }
+
+@media screen and (max-width: 600px) {
+  .liClient , .clients , .btn-txt1 , .btn-txt2 , .btn-txt3 , .btn-txt4 , .btn-nickName , .nickName {
+    font-size: 10px;
+  }
+}
+
