--- a/public/chat.css
+++ b/public/chat.css
@@ -8,13 +8,13 @@
 }
 
 *::-webkit-scrollbar-track {
-  /* background: orange; */
+  background: #2d0922;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: white;
-  border-radius: 20px;
   border: 3px solid #2d0922;
+  border-radius: 20px;
 }
 
 body {
@@ -61,9 +61,9 @@ body {
   color: white;
 }
 
-@media screen and (max-width: 600px) {
-  .liClient , .title1 , .title2 , .usersCount ,
-  .label-nickname1 , .label-nickname2 , .label-nickname3 ,
+@media screen and ( max-width : 600px ) {
+  .liClient , .title1 , .title2 , .usersCount , 
+  .label-nickname1 , .label-nickname2 , .label-nickname3 , 
   .label-nickname4 {
     font-size: 10px;
   }
