--- a/public/clients.css
+++ b/public/clients.css
@@ -1,6 +1,5 @@
 .header {
-  /* height: fit-content; */
-  margin: 10px 0 0 0;
+  margin: 10px;
   width: 100%;
 }
 
@@ -20,16 +19,13 @@
 
 .clients {
   font-size: 15px;
-  /* max-height: 110px; */
   overflow: auto;
   overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
-  scrollbar-width: thin;
-  scrollbar-color: blue orange;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and ( max-width : 600px ) {
   .clients {
     max-height: 60px;;
   }
@@ -80,7 +76,7 @@
   width: fit-content;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and ( max-width : 600px ) {
   .liClient , .clients , .btn-txt1 , .btn-txt2 , .btn-txt3 , .btn-txt4 , .btn-nickName , .nickName {
     font-size: 10px;
   }
