--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,34 +1,35 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
-  font: 13px Helvetica, Arial;
+  font: Helvetica, Arial;
+  font-size: 13px;
 }
 
 form {
-  background: #000;
+  background: black;
+  bottom: 0;
   padding: 3px;
   position: fixed;
-  bottom: 0;
   width: 100%;
 }
 
 form input {
   border: 0;
   padding: 10px;
-  width: 90%;
   margin-right: 0.5%;
+  width: 90%;
 }
 
 form button {
-  width: 9%;
-  background: rgb(130, 224, 255);
+  background: rgb(35, 42, 44);
   border: none;
-  padding: 10px;
   cursor: pointer;
+  padding: 10px;
+  width: 9%;
 }
 
 #messages {
@@ -38,7 +39,7 @@ form button {
 }
 
 #messages li {
-  padding: 5px 10px;
+  padding: 0px 5px 0px;
 }
 
 #messages li:nth-child(odd) {
