--- a/public/clients.css
+++ b/public/clients.css
@@ -26,8 +26,9 @@
 }
 
 @media screen and ( max-width : 600px ) {
-  .clients {
-    max-height: 60px;;
+  .clients
+  {
+    max-height: 60px;
   }
 }
 
