--- a/public/messages.css
+++ b/public/messages.css
@@ -7,12 +7,14 @@
 }
 
 @media screen and ( max-width : 600px ) {
+
   .container-box-message {
     max-height: 250px;
   }
 }
 
 @media screen and ( max-height : 600px ) {
+
   .container-box-message {
     max-height: 200px;
   }
@@ -76,7 +78,9 @@
 }
 
 @media screen and ( max-width : 600px ) {
-  .liMessage , .btn-msg , .btn-input1 , .btn-input2 , .btn-input3 , .btn-input4 , .messageInput {
+
+  .liMessage , .btn-msg , .btn-input1 , .btn-input2 , .btn-input3 ,
+    .btn-input4 , .messageInput {
     font-size: 10px;
   }
 }
