--- a/public/messages.css
+++ b/public/messages.css
@@ -79,8 +79,8 @@
 
 @media screen and ( max-width : 600px ) {
 
-  .liMessage , .btn-msg , .btn-input1 , .btn-input2 , .btn-input3 , 
-  .btn-input4 , .messageInput {
+  .liMessage , .btn-msg , .btn-input1 , .btn-input2 , .btn-input3
+  , .btn-input4 , .messageInput {
     font-size: 10px;
   }
 }
