--- a/public/clients.css
+++ b/public/clients.css
@@ -79,7 +79,13 @@
 
 @media screen and ( max-width : 600px ) {
 
-  .liClient , .clients , .btn-txt1 , .btn-txt2 ,
+  .liClient , .clients , .btn-txt1 , .btn-txt2 {
+    font-size: 10px;
+  }
+}
+
+@media screen and ( max-width : 600px ) {
+
   .btn-txt3 , .btn-txt4 , .btn-nickName , .nickName {
     font-size: 10px;
   }
