--- a/public/chat.css
+++ b/public/chat.css
@@ -63,8 +63,14 @@ body {
 
 @media screen and ( max-width : 600px ) {
 
-  .liClient , .title1 , .title2 , .usersCount , .label-nickname1
-  , .label-nickname2 , .label-nickname3 , .label-nickname4 {
+  .liClient , .title1 , .title2 , .usersCount , .label-nickname1 {
+    font-size: 10px;
+  }
+}
+
+@media screen and ( max-width : 600px ) {
+
+  .label-nickname2 , .label-nickname3 , .label-nickname4 {
     font-size: 10px;
   }
 }
