--- a/public/clients.css
+++ b/public/clients.css
@@ -1,24 +1,12 @@
 .header {
-  margin: 10px;
+  margin-top: 10px;
   width: 100%;
-}
-
-.liClient {
-  border: none;
-  border-radius: 50px;
-  color: #4b890a;
-  display: inline-block;
-  font-size: 15px;
-  font-weight: 900;
-  list-style-type: none;
-  margin: 4px 2px;
-  text-align: center;
-  text-decoration: none;
-  width: 180px;
 }
 
 .clients {
   font-size: 15px;
+  margin-top: 10px;
+  max-height: 50px;
   overflow: auto;
   overflow-x: hidden;
   overflow-y: auto;
@@ -30,6 +18,19 @@
   .clients {
     max-height: 60px;
   }
+}
+
+.liClient {
+  border: none;
+  border-radius: 50px;
+  color: #4b890a;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: 900;
+  list-style-type: none;
+  text-align: center;
+  text-decoration: none;
+  width: 180px;
 }
 
 .btn-txt1 {
@@ -55,11 +56,6 @@
   font-weight: 900;
 }
 
-::placeholder {
-  color: #335a9e;
-  opacity: 1;
-}
-
 .nickName {
   background-color: #2d0922;
   border-style: none;
@@ -74,6 +70,7 @@
   border-bottom-style: none;
   color: #4b890a;
   cursor: pointer;
+  margin-top: 10px;
   width: fit-content;
 }
 
@@ -90,3 +87,13 @@
     font-size: 10px;
   }
 }
+
+/* .nickName::placeholder {
+  color: #335a9e;
+  opacity: 1;
+} */
+
+/* .btn-txt1:hover {
+  color: #bd9b04;
+  opacity: 1;
+} */
