--- a/public/messages.css
+++ b/public/messages.css
@@ -25,7 +25,8 @@
   color: white;
   display: block;
   font-size: 16px;
-  margin: 5px 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   overflow-wrap: break-word;
   text-decoration: none;
   width: 80%;
@@ -43,7 +44,6 @@
   border-bottom-style: none;
   color: #4b890a;
   cursor: pointer;
-  margin-left: 10px;
   width: fit-content;
 }
 
@@ -72,6 +72,7 @@
   border: 0;
   border-style: none;
   color: white;
+  margin-top: 10px;
   margin-bottom: 10px;
   outline: none;
   width: 45%;
