--- a/public/messages.css
+++ b/public/messages.css
@@ -72,7 +72,7 @@
   border: 0;
   border-style: none;
   color: white;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   margin-top: 10px;
   outline: none;
   width: 45%;
