fix: :zap: req 2 - agora foi
thanks ANDERSON e GUILHERME  💚 💚 💚 💚 💚 💚

--- a/views/chat/index.ejs
+++ b/views/chat/index.ejs
@@ -15,12 +15,13 @@
   </header>
 
   <div>
-    <input 
-      type="text" 
-      placeholder="Insira o seu nickname"
-      class="nick__name"
-      data-testid="nickname-box"
-    >
+    <span>Seu nickname é</span>
+      <input 
+        type="text" 
+        placeholder="Insira o seu nickname"
+        class="nick__name"
+        data-testid="nickname-box"
+      >
     <button type="button" data-testid="nickname-button" class="nick__btn">Salvar</button>
 </div>
 
