--- a/public/clients.css
+++ b/public/clients.css
@@ -28,6 +28,7 @@
   font-size: 15px;
   font-weight: 900;
   list-style-type: none;
+  margin: 0;
   text-align: center;
   text-decoration: none;
   width: 180px;
